studio: add chat client
