# spring-ai-alibaba-studio/src/main/java/com/alibaba/cloud/ai/service/impl/ChatModelDelegateImpl.java
@@ -24,12 +24,17 @@ import com.alibaba.cloud.ai.dashscope.image.DashScopeImageModel;
 import com.alibaba.cloud.ai.dashscope.image.DashScopeImageOptions;
 import com.alibaba.cloud.ai.exception.NotFoundException;
 import com.alibaba.cloud.ai.model.ChatModel;
-import com.alibaba.cloud.ai.param.RunActionParam;
+import com.alibaba.cloud.ai.param.ModelRunActionParam;
 import com.alibaba.cloud.ai.service.ChatModelDelegate;
 import com.alibaba.cloud.ai.utils.SpringApplicationUtil;
 import com.alibaba.cloud.ai.vo.ActionResult;
 import com.alibaba.cloud.ai.vo.ChatModelRunResult;
+import com.alibaba.cloud.ai.vo.TelemetryResult;
 import com.alibaba.fastjson.JSON;
+import io.micrometer.tracing.Tracer;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.ai.chat.model.ChatResponse;
 import org.springframework.ai.chat.prompt.Prompt;
@@ -40,13 +45,15 @@ import org.springframework.ai.image.ImagePrompt;
 import org.springframework.ai.image.ImageResponse;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
-
 @Service
 @Slf4j
 public class ChatModelDelegateImpl implements ChatModelDelegate {
+
+	private final Tracer tracer;
+
+	public ChatModelDelegateImpl(Tracer tracer) {
+		this.tracer = tracer;
+	}
 
 	@Override
 	public List<ChatModel> list() {
@@ -111,7 +118,7 @@ public class ChatModelDelegateImpl implements ChatModelDelegate {
 		ImageModel imageModel = getImageModel(modelName);
 		if (imageModel != null) {
 			ChatModel model = ChatModel.builder().name(modelName).modelType(ModelType.IMAGE).build();
-			if (imageModel.getClass() == DashScopeImageModel.class) {
+			if (imageModel.getClass().equals(DashScopeImageModel.class)) {
 				DashScopeImageModel dashScopeImageModel = (DashScopeImageModel) imageModel;
 				model.setModel(dashScopeImageModel.getOptions().getModel());
 				model.setImageOptions(dashScopeImageModel.getOptions());
@@ -126,7 +133,7 @@ public class ChatModelDelegateImpl implements ChatModelDelegate {
 	}
 
 	@Override
-	public ChatModelRunResult run(RunActionParam runActionParam) {
+	public ChatModelRunResult run(ModelRunActionParam runActionParam) {
 		String key = runActionParam.getKey();
 		String input = runActionParam.getInput();
 		DashScopeChatOptions chatOptions = runActionParam.getChatOptions();
@@ -145,6 +152,7 @@ public class ChatModelDelegateImpl implements ChatModelDelegate {
 			return ChatModelRunResult.builder()
 				.input(runActionParam)
 				.result(ActionResult.builder().Response(resp).build())
+				.telemetry(TelemetryResult.builder().traceId(tracer.currentSpan().context().traceId()).build())
 				.build();
 		}
 
@@ -153,10 +161,10 @@ public class ChatModelDelegateImpl implements ChatModelDelegate {
 	}
 
 	@Override
-	public String runImageGenTask(RunActionParam runActionParam) {
-		String key = runActionParam.getKey();
-		String input = runActionParam.getInput();
-		DashScopeImageOptions imageOptions = runActionParam.getImageOptions();
+	public String runImageGenTask(ModelRunActionParam modelRunActionParam) {
+		String key = modelRunActionParam.getKey();
+		String input = modelRunActionParam.getInput();
+		DashScopeImageOptions imageOptions = modelRunActionParam.getImageOptions();
 
 		ImageModel imageModel = getImageModel(key);
 		if (imageModel != null) {
@@ -191,6 +199,16 @@ public class ChatModelDelegateImpl implements ChatModelDelegate {
 
 		log.error("can not find by bean name:{}", key);
 		throw new NotFoundException();
+	}
+
+	@Override
+	public ChatModelRunResult runImageGenTaskAndGetUrl(ModelRunActionParam modelRunActionParam) {
+		String imageUrl = runImageGenTask(modelRunActionParam);
+		return ChatModelRunResult.builder()
+			.input(modelRunActionParam)
+			.result(ActionResult.builder().Response(imageUrl).build())
+			.telemetry(TelemetryResult.builder().traceId(tracer.currentSpan().context().traceId()).build())
+			.build();
 	}
 
 	private org.springframework.ai.chat.model.ChatModel getChatModel(String modelName) {
