# spring-ai-alibaba-studio/src/main/resources/openapi.yaml
@@ -3,18 +3,55 @@ info:
   title: OpenAPI definition
   version: v0
 servers:
-  - url: http://localhost:8080
-    description: Generated server url
+- url: http://localhost:8080
+  description: Generated server url
 tags:
-  - name: chat-client
-    description: the chat-client API
-  - name: chat-model
-    description: the chat-model API
+- name: chat-client
+  description: the chat-client API
+- name: chat-model
+  description: the chat-model API
 paths:
+  /studio/api/chat-models/run/image-gen/url:
+    get:
+      tags:
+      - chat-model
+      summary: "run image model by input, and url"
+      operationId: runImageGenTaskAndGetUrl
+      parameters:
+      - name: modelRunActionParam
+        in: query
+        required: true
+        schema:
+          $ref: "#/components/schemas/ModelRunActionParam"
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/RChatModelRunResult"
+    post:
+      tags:
+      - chat-model
+      summary: "run image model by input, and url"
+      operationId: runImageGenTaskAndGetUrl_1
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ModelRunActionParam"
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/RChatModelRunResult"
   /studio/api/chat-models:
     get:
       tags:
-        - chat-model
+      - chat-model
       summary: list chat models
       operationId: list
       responses:
@@ -26,14 +63,14 @@ paths:
                 $ref: "#/components/schemas/RListChatModel"
     post:
       tags:
-        - chat-model
+      - chat-model
       summary: run chat model by input
       operationId: run
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/RunActionParam"
+              $ref: "#/components/schemas/ModelRunActionParam"
         required: true
       responses:
         "200":
@@ -45,41 +82,22 @@ paths:
   /studio/api/chat-models/run/image-gen:
     post:
       tags:
-        - chat-model
+      - chat-model
       summary: run image model by input
       operationId: runImageGenTask
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/RunActionParam"
+              $ref: "#/components/schemas/ModelRunActionParam"
         required: true
       responses:
         "200":
           description: OK
-  /studio/api/chat-models/{modelName}:
-    get:
-      tags:
-        - chat-model
-      summary: get chat model by model name
-      operationId: get
-      parameters:
-        - name: modelName
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/RChatModel"
   /studio/api/chat-clients:
     get:
       tags:
-        - chat-client
+      - chat-client
       summary: list chat clients
       operationId: list_1
       responses:
@@ -89,18 +107,145 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/RListChatClient"
+    post:
+      tags:
+      - chat-client
+      summary: run chat client by input
+      operationId: run_1
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ClientRunActionParam"
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/RChatClientRunResult"
+  /studio/api/observation/getAll:
+    get:
+      tags:
+      - observation-api-controller
+      operationId: getAll
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/RArrayNode"
+  /studio/api/observation/getAITraceInfo:
+    get:
+      tags:
+      - observation-api-controller
+      operationId: getAITraceInfo
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/RArrayNode"
+  /studio/api/observation/detail:
+    get:
+      tags:
+      - observation-api-controller
+      operationId: detail
+      parameters:
+      - name: traceId
+        in: query
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/RJsonNode"
+  /studio/api/observation/clearAll:
+    get:
+      tags:
+      - observation-api-controller
+      operationId: clearAll
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/RString"
+  /studio/api/observation/chatModel:
+    get:
+      tags:
+      - observation-api-controller
+      operationId: chatModel
+      parameters:
+      - name: input
+        in: query
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/RString"
+  /studio/api/observation/chatClient:
+    get:
+      tags:
+      - observation-api-controller
+      operationId: chatClient
+      parameters:
+      - name: input
+        in: query
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/RString"
+  /studio/api/chat-models/{modelName}:
+    get:
+      tags:
+      - chat-model
+      summary: get chat model by model name
+      operationId: get
+      parameters:
+      - name: modelName
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/RChatModel"
   /studio/api/chat-clients/{clientName}:
     get:
       tags:
-        - chat-client
+      - chat-client
       summary: get chat client by name
       operationId: get_1
       parameters:
-        - name: clientName
-          in: path
-          required: true
-          schema:
-            type: string
+      - name: clientName
+        in: path
+        required: true
+        schema:
+          type: string
       responses:
         "200":
           description: OK
@@ -111,14 +256,14 @@ paths:
   /ai/stream:
     get:
       tags:
-        - chat-controller
+      - chat-controller
       operationId: stream
       parameters:
-        - name: input
-          in: query
-          required: true
-          schema:
-            type: string
+      - name: input
+        in: query
+        required: true
+        schema:
+          type: string
       responses:
         "200":
           description: OK
@@ -129,14 +274,14 @@ paths:
   /ai/streamByModel:
     get:
       tags:
-        - chat-controller
+      - chat-controller
       operationId: streamByModel
       parameters:
-        - name: input
-          in: query
-          required: true
-          schema:
-            type: string
+      - name: input
+        in: query
+        required: true
+        schema:
+          type: string
       responses:
         "200":
           description: OK
@@ -147,14 +292,14 @@ paths:
   /ai/chat:
     get:
       tags:
-        - chat-controller
+      - chat-controller
       operationId: chat
       parameters:
-        - name: input
-          in: query
-          required: true
-          schema:
-            type: string
+      - name: input
+        in: query
+        required: true
+        schema:
+          type: string
       responses:
         "200":
           description: OK
@@ -165,14 +310,14 @@ paths:
   /ai/chatByModel:
     get:
       tags:
-        - chat-controller
+      - chat-controller
       operationId: chatByModel
       parameters:
-        - name: input
-          in: query
-          required: true
-          schema:
-            type: string
+      - name: input
+        in: query
+        required: true
+        schema:
+          type: string
       responses:
         "200":
           description: OK
@@ -185,6 +330,12 @@ components:
     DashScopeChatOptions:
       type: object
       properties:
+        maxTokens:
+          type: integer
+          format: int32
+        presencePenalty:
+          type: number
+          format: double
         frequencyPenalty:
           type: number
           format: double
@@ -192,12 +343,6 @@ components:
           type: array
           items:
             type: string
-        maxTokens:
-          type: integer
-          format: int32
-        presencePenalty:
-          type: number
-          format: double
         proxyToolCalls:
           type: boolean
         model:
@@ -288,10 +433,10 @@ components:
         type:
           type: string
           enum:
-            - function
+          - function
         function:
           $ref: "#/components/schemas/Function"
-    RunActionParam:
+    ModelRunActionParam:
       type: object
       properties:
         key:
@@ -303,10 +448,6 @@ components:
         prompt:
           type: string
           description: system prompt
-        useChatModel:
-          type: boolean
-          description: "use chat model, is use, will be enable chat memory"
-          default: false
         stream:
           type: boolean
           description: use stream response
@@ -332,7 +473,7 @@ components:
       type: object
       properties:
         input:
-          $ref: "#/components/schemas/RunActionParam"
+          $ref: "#/components/schemas/ModelRunActionParam"
         result:
           $ref: "#/components/schemas/ActionResult"
         telemetry:
@@ -355,6 +496,99 @@ components:
       properties:
         traceId:
           type: string
+    ClientRunActionParam:
+      type: object
+      properties:
+        key:
+          type: string
+          description: "action key, bean name"
+        input:
+          type: string
+          description: user input
+        prompt:
+          type: string
+          description: system prompt
+        chatID:
+          type: string
+          description: "chat id use for chat mode, if not set, server will set a new"
+          nullable: true
+        useChatMode:
+          type: boolean
+          description: "use chat mode, is use, will be enable chat memory"
+          default: false
+        stream:
+          type: boolean
+          description: use stream response
+          default: false
+        chatOptions:
+          $ref: "#/components/schemas/DashScopeChatOptions"
+    ChatClientRunResult:
+      type: object
+      properties:
+        input:
+          $ref: "#/components/schemas/ClientRunActionParam"
+        result:
+          $ref: "#/components/schemas/ActionResult"
+        telemetry:
+          $ref: "#/components/schemas/TelemetryResult"
+        chatID:
+          type: string
+    RChatClientRunResult:
+      type: object
+      properties:
+        code:
+          type: integer
+          format: int32
+        msg:
+          type: string
+        data:
+          $ref: "#/components/schemas/ChatClientRunResult"
+        timestamp:
+          type: integer
+          format: int64
+    ArrayNode:
+      type: object
+    RArrayNode:
+      type: object
+      properties:
+        code:
+          type: integer
+          format: int32
+        msg:
+          type: string
+        data:
+          $ref: "#/components/schemas/ArrayNode"
+        timestamp:
+          type: integer
+          format: int64
+    JsonNode:
+      type: object
+    RJsonNode:
+      type: object
+      properties:
+        code:
+          type: integer
+          format: int32
+        msg:
+          type: string
+        data:
+          $ref: "#/components/schemas/JsonNode"
+        timestamp:
+          type: integer
+          format: int64
+    RString:
+      type: object
+      properties:
+        code:
+          type: integer
+          format: int32
+        msg:
+          type: string
+        data:
+          type: string
+        timestamp:
+          type: integer
+          format: int64
     ChatModel:
       type: object
       properties:
@@ -367,9 +601,9 @@ components:
         modelType:
           type: string
           enum:
-            - CHAT
-            - IMAGE
-            - AUDIO
+          - CHAT
+          - IMAGE
+          - AUDIO
         chatOptions:
           $ref: "#/components/schemas/DashScopeChatOptions"
         imageOptions:
@@ -404,6 +638,50 @@ components:
           format: int64
     ChatClient:
       type: object
+      properties:
+        name:
+          type: string
+          description: ChatClient bean name
+        defaultSystemText:
+          type: string
+          description: Default System Text
+        defaultSystemParams:
+          type: object
+          additionalProperties:
+            type: object
+            description: Default System Params
+          description: Default System Params
+        chatModel:
+          $ref: "#/components/schemas/ChatModel"
+        chatOptions:
+          $ref: "#/components/schemas/ChatOptions"
+    ChatOptions:
+      type: object
+      properties:
+        topP:
+          type: number
+          format: double
+        topK:
+          type: integer
+          format: int32
+        model:
+          type: string
+        maxTokens:
+          type: integer
+          format: int32
+        presencePenalty:
+          type: number
+          format: double
+        temperature:
+          type: number
+          format: double
+        frequencyPenalty:
+          type: number
+          format: double
+        stopSequences:
+          type: array
+          items:
+            type: string
     RListChatClient:
       type: object
       properties:
